# YaFSM

./: .clang-format  CHANGES  CMakeLists.txt  LICENSE  README.md  index.html  params.json
.github/workflows/: README.md  build_package.yml  build_plugin.yml
cmake/: YaFSM.cmake
doc/: CMakeLists.txt
doc/fsm/basics/: YaFsm_Basics.odt  YaFsm_Design.odt  YaFsm_Design.xmi  YaFsm_Intro.odp  YaFsm_UsersGuide.odt
src/: CMakeLists.txt  FindYaFSM.cmake
src/cpp/: CMakeLists.txt  YaFsm.cpp  YaFsm.h  YaFsmScxmlParser.cpp  YaFsmScxmlParser.h  main.cpp
src/cpp/inc/: IScxmlFSMEvent.h  IScxmlFSMEventCB.h
src/cpp/qt/: ScxmlFSMEvent.cpp  ScxmlFSMEvent.h
src/cpp/stl/: ScxmlFSMEvent.cpp  ScxmlFSMEvent.h
src/cpp/tinyxml/: tinyxml2.cpp  tinyxml2.h
src/cpp/unittests/: CMakeLists.txt  YaFsmCppTest.cpp  YaFsmCppTest.h  main.cpp
src/perl/: CMakeLists.txt  YaFsm.pl  YaFsm.pm  YaFsmCodeGen.pm  YaFsmCodeGenCppOO.pm  YaFsmParser.pm  YaFsmScxmlCodeGenCppOO.pm  YaFsmScxmlParser.pm  YaFsmScxmlViewerGen.pm  YaFsmViewerGen.pm  yafsmgen  yafsmgen.cmd
src/perl/codeimpl/cpp/inc/: IFSMEvent.h  IFSMEventCB.h  IFSMTimer.h  IFSMTimerCB.h  IScxmlFSMEvent.h  IScxmlFSMEventCB.h
src/perl/codeimpl/cpp/qt4/: FSMEvent.cpp  FSMEvent.h  FSMTimer.cpp  FSMTimer.h  ScxmlFSMEvent.cpp  ScxmlFSMEvent.h
src/perl/codeimpl/cpp/std/: FSMEvent.cpp  FSMEvent.h  FSMTimer.cpp
src/xml/: yafsm.xsd
src/yafsmviewer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  treeitem.cpp  treemodel.cpp  treemodel.h  yafsmview  yafsmviewer.cpp  yafsmviewer.h  yafsmviewer.qrc  yafsmviewer.ui
test/: CMakeLists.txt
test/examples/: CMakeLists.txt
test/examples/pumpe/: CMakeLists.txt  PumpFSM.xml  main.cpp
test/examples/scxml/: CMakeLists.txt
test/examples/scxml/creator/: CMakeLists.txt  CreatorStateFSM.scxml  main.cpp
test/examples/scxml/simple/: CMakeLists.txt  SimpleFSM.scxml  main.cpp
test/examples/statesTrafficLight/: CMakeLists.txt  TrafficLight.cpp  TrafficLight.h  TrafficLightDefines.h  TrafficLightFSM.xml  TrafficLightWidget.cpp  TrafficLightWidget.h  main.cpp
test/include/catch2/: README.txt
test/unittests/: CMakeLists.txt
test/unittests/scxml/: CMakeLists.txt
test/unittests/scxml/statesEvent/: CMakeLists.txt  EventScxmlFSM.scxml  EventScxmlFSMDataModel.cpp  EventScxmlFSMDataModel.h  TestEventScxmlFSM.cpp  TestEventScxmlFSM.h
test/unittests/scxml/statesSimple/: CMakeLists.txt  SimpleScxmlDataModel.h  SimpleScxmlFSM.scxml  TestSimpleScxmlFSM.cpp  TestSimpleScxmlFSM.h  simplescxmlfsmdatamodel.h
test/unittests/scxml/statesTimer/: CMakeLists.txt  TestTimerScxmlFSM.cpp  TestTimerScxmlFSM.h  TimerScxmlFSM.scxml  TimerScxmlFSMDataModel.cpp  TimerScxmlFSMDataModel.h
test/unittests/scxml/statesTransitions/: CMakeLists.txt  TestTransScxmlFSM.cpp  TestTransScxmlFSM.h  TransScxmlDataModel.h  TransScxmlFSM.scxml
test/unittests/statesActions/: ActionFSM.xml  TestActionFSM.h
test/unittests/statesActions/inc/: TestTypes.h
test/unittests/statesEvent/: CMakeLists.txt  EventFSM.xml  TestEventFSM.cpp  TestEventFSM.h
test/unittests/statesFull/: CMakeLists.txt  FullFSM.xml  TestFullFSM.cpp  TestFullFSM.h
test/unittests/statesSimple/: SimpleFSM.xml  TestSimpleFSM.h
test/unittests/statesTimer/: CMakeLists.txt  TestTimerFSM.h
test/unittests/statesTrigger/: CMakeLists.txt  TestTriggerFSM.cpp  TestTriggerFSM.h  TriggerFSM.xml
test/unittests/xml/: CMakeLists.txt
test/unittests/xml/statesActions/: CMakeLists.txt  TestActionFSM.cpp  TestActionFSM.h
test/unittests/xml/statesEvent/: TestEventFSM.cpp
test/unittests/xml/statesSimple/: CMakeLists.txt  TestSimpleFSM.cpp  TestSimpleFSM.h
test/unittests/xml/statesTimer/: TestTimerFSM.cpp  TimerFSM.xml
