project (simplescxml)

set( DESIRED_QT_VERSION 4 )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
include(${QT_USE_FILE})
INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} )

FSM_GENERATE(GENERATED_FSM_SRC SimpleFSM.scxml)

add_executable(simple ${GENERATED_FSM_SRC} ${GENERATED_FSM_SRC_MOC_HEADERS})
#target_link_libraries(simple ${QT_LIBRARIES})

